objects/DocumentStatus__c.object
<CustomObject>
    <description>The document score and status for all levels of the document management process.</description>
    <fields>
        <fullName>DocumentStatusEID__c</fullName>
        <description>The Enterprise ID for this document status.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this document status.</inlineHelpText>
        <label>Document Status EID</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExternalStatusName__c</fullName>
        <description>The external, client-friendly term for this document status.</description>
        <inlineHelpText>The external, client-friendly term for this document status.</inlineHelpText>
        <label>External Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalStatusName__c</fullName>
        <description>The internal term for this document status.</description>
        <inlineHelpText>The internal term for this document status.</inlineHelpText>
        <label>Internal Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaserficheID__c</fullName>
        <description>The number assigned to this score in Laserfiche.</description>
        <externalId>true</externalId>
        <inlineHelpText>The number assigned to this score in Laserfiche.</inlineHelpText>
        <label>Laserfiche ID</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RankOrder__c</fullName>
        <description>The rank of importance of this document score.</description>
        <inlineHelpText>The rank of importance of this document score.</inlineHelpText>
        <label>Rank Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentStatusEID__c</columns>
        <columns>RankOrder__c</columns>
        <columns>InternalStatusName__c</columns>
        <columns>ExternalStatusName__c</columns>
        <columns>LaserficheID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>